# id_reader_minimal

./: .gitignore  CMakeLists.txt  Makefile  README.md  detect_id_card.cpp  detect_id_card.h  main.cpp  runtest.sh
src/: detect_id_card.cpp  detect_id_card.h  main.cpp
tests/: CMakeLists.txt  test_main.cpp
